--- a/spec.yaml
+++ b/spec.yaml
@@ -1,9 +1,6 @@
 name: zero2prod
-# Check https://www.digitalocean.com/docs/app-platform/#regional-availability
-# for a list of all the available options.
-# You can get region slugs from
-# https://www.digitalocean.com/docs/platform/availability-matrix/
-# They must specified lowercased.
+# See https://www.digitalocean.com/docs/app-platform/#regional-availability for the available options
+# You can get region slugs from https://www.digitalocean.com/docs/platform/availability-matrix/
 # `fra` stands for Frankfurt (Germany - EU)
 region: fra
 services:
@@ -12,31 +9,27 @@ services:
     dockerfile_path: Dockerfile
     source_dir: .
     github:
-      # Depending on when you created the repository,
-      # the default branch on GitHub might have been named `master`
       branch: main
-      # Deploy a new version on every commit to `main`!
-      # Continuous Deployment, here we come!
       deploy_on_push: true
-      # !!! Fill in with your details
-      # e.g. LukeMathWalker/zero-to-production
-      repo: <YOUR USERNAME>/<YOUR REPOSITORY NAME>
+      repo: NoahShin/zero2prod
     # Active probe used by DigitalOcean's to ensure our application is healthy
     health_check:
-    # The path to our health check endpoint!
-    # It turned out to be useful in the end!
+      # The path to our health check endpoint! It turned out to be useful in the end!
       http_path: /health_check
-  # The port the application will be listening on for incoming requests
-  # It should match what we specified in our configuration/production.yaml file!
+    # The port the application will be listening on for incoming requests
+    # It should match what we specify in our configuration.yaml file!
     http_port: 8000
-  # For production workloads we'd go for at least two!
-  # But let's try to keep the bill under control for now...
+    # For production workloads we'd go for at least two!
     instance_count: 1
+    # Let's keep the bill lean for now...
     instance_size_slug: basic-xxs
-  # All incoming requests should be routed to our app
+    # All incoming requests should be routed to our app
     routes:
       - path: /
     envs:
+      - key: APP_APPLICATION__BASE_URL
+        scope: RUN_TIME
+        value: ${APP_URL}
       - key: APP_DATABASE__USERNAME
         scope: RUN_TIME
         value: ${newsletter.USERNAME}
@@ -61,4 +54,4 @@ databases:
     num_nodes: 1
     size: db-s-dev-database
     # Postgres version - using the latest here
-    version: "12"
+    version: "14"
