--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,8 @@ anyhow = "1.0.40"
 validator = "0.16"
 tracing-actix-web = "0.7"
 secrecy = { version = "0.8", features = ["serde"] }
+thiserror = "1.0.52"
+
 
 [dev-dependencies]
 once_cell = "1.7.2"
