--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,11 @@ validator = "0.16"
 tracing-actix-web = "0.7"
 secrecy = { version = "0.8", features = ["serde"] }
 thiserror = "1.0.52"
+base64 = "0.21"
+sha3 = "0.9"
+argon2 = { version = "0.4", features = ["std"]}
+urlencoding = "2"
+
 
 
 [dev-dependencies]
